--- a/PrivateWorkSite/style.css
+++ b/PrivateWorkSite/style.css
@@ -1,5 +1,29 @@
 body
+
 /*以下*/
+.btn,
+a.btn,
+button.btn {
+    font-size: 1.6rem;
+    font-weight: 700;
+    line-height: 1.5;
+    position: relative;
+    display: inline-block;
+    padding: 1rem 4rem;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    text-align: center;
+    vertical-align: middle;
+    text-decoration: none;
+    letter-spacing: 0.1em;
+    color: #212529;
+    border-radius: 0.5rem;
+}
 
 /*↓背景画像*/
 
@@ -28,5 +52,100 @@ body
 header {
     display: inline-block;
     height: 100%;
-    border: solid black;
+    color: whitesmoke;
+}
+
+.g_navi {
+    border: solid black 1px;
+    background-color: #212529;
+    text-align: center;
+}
+
+/*その他と主な共通部分は省略*/
+
+a.btn-flat {
+    overflow: hidden;
+    padding: 1.5rem 6rem;
+    color: #fff;
+    border-radius: 0;
+    background: #000;
+    transform: scale(0.8, 0.8);
+}
+
+a.btn-flat span {
+    position: relative;
+}
+
+a.btn-flat:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    content: '';
+    -webkit-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+    -webkit-transform: translateX(-96%);
+    transform: translateX(-96%);
+    background: #eb6877;
+}
+
+a.btn-flat:hover:before {
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
+}
+
+.news {
+    text-align: center;
+}
+
+.news_column {
+    border: #212529 solid 1.5px;
+    display: flex;
+}
+
+.news_column .image {
+    width: 30%;
+    height: auto;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    position: relative;
+}
+
+.news_column .image::before {
+    content: "";
+    display: block;
+    padding-top: 58%;
+}
+
+.news_column .image img {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+}
+
+.news_column .colum_Contents {
+    margin: 1 1 1 20px;
+    padding: 0;
+}
+
+.news_column .colum_title {
+    margin: 0;
+    padding-left: 5px;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.news_column .colum_text {
+    margin: 10px 0 0;
+    padding-left: 5px;
+}
+
+article {
+    padding: 4px;
 }
